# nexushive-agent-insights

./: CLAUDE.md  README.md  pyproject.toml
docs/: getting-started.md
src/client/: __init__.py  api.py  instrumentation.py
src/collector/: __init__.py  evaluation.py  metrics.py
src/examples/: __init__.py  smolagents_example.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_api.py  test_instrumentation.py
